Updated hover radius bug, improved creating view, improved timeline view on mobile, fixed padding inconsistencies

--- a/src/theme/overwrite.scss
+++ b/src/theme/overwrite.scss
@@ -17,3 +17,9 @@
 .v-data-table > .v-data-table__wrapper > table > thead > tr > th > span {
   color: white;
 }
+
+.v-data-table>.v-data-table__wrapper tbody tr:first-child:hover td:first-child,
+.v-data-table>.v-data-table__wrapper tbody tr:first-child:hover td:last-child {
+  border-top-left-radius: 0 !important;
+  border-top-right-radius: 0 !important;
+}
